--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -7,8 +7,6 @@
         "3g-proof-status": "Status",
         "3g-proof-valid-for": "Validity",
         "3g-proof-valid-till-title": "Valid until",
-        "3g-proof-valid-full": "Lectures",
-        "3g-proof-valid-full-no-access": "No",
         "additional-information": "You can import your evidence of a low epidemiological risk by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code. ",
         "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
         "confirm-not-checked-body": "Please confirm that the information you have provided is correct and that you are aware that misuse of the greenlight app may lead to legal consequences",
@@ -39,7 +37,6 @@
         "other-error-title": "Error!",
         "photo-not-available-body": "No photo of your student or staff ID card could be loaded from {{serviceName}}. Please try again at a later time.",
         "photo-not-available-title": "Ticket creation failed!",
-        "place-select-title": "Select a place",
         "qr-button-text": "Scan QR code",
         "remove-proof": "Remove evidence",
         "request-ticket-button-text": "Request ticket",
@@ -76,7 +73,6 @@
         "3-g-evidence": "Evidence",
         "3-g-evidence-green-pass-valid": "Green Pass imported and valid on this device",
         "3-g-evidence-greenpass": "Evidence: Green Pass found",
-        "3-g-evidence-fullproof": "Evidence: Full proof found",
         "3-g-evidence-invalid": "No valid evidence found on this device",
         "3-g-evidence-invalid-text": "You may have imported your evidence on another device, the evidence is no longer valid or the application has not been used for a longer period of time.",
         "3-g-evidence-maximize-saving": "Add the app to the home screen of your smartphone to maximize the storage time of the evidence.",
@@ -108,7 +104,7 @@
     },
     "show-btn-text": "Show",
     "show-reference-ticket": {
-        "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the evidence imported on the controlled person\u0027s device. The reference ticket does not entitle you to enter rooms at the university.",
+        "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the evidence imported on the controlled person's device. The reference ticket does not entitle you to enter rooms at the university.",
         "information-container-body": "If a valid health certificate is available on this device then its QR code is displayed and the ticket is shown in color. This QR code can be checked with GreenCheck. If a self-test that was issued by Land Steiermark or Land Kärnten is available on this device then its QR code is displayed and the ticket is shown in black and white. This QR code cannot be validated by this app, therefore its validation requires a QR code scanner. If a valid university-internal test is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.",
         "information-container-headline": "Information about evidence",
         "place-name": "Place",
@@ -122,8 +118,6 @@
     "validation-not-possible-title": "Validierung aktuell nicht möglich",
     "validity-tooltip": "According to the current regulations of {{place}}. The validity period is automatically updated when the regulations change.",
     "validity-tooltip-ticket-text": "The ticket is only valid in electronic form.",
-    "aria-invalid-text": "Invalid",
-    "aria-valid-text": "Valid",
     "partial-validity-default": "Access to the university",
     "full-validity-default": "Extended access to the university",
     "no-full-validity-default": "No extended access to the university"
