Add a no-ticket-required attribute and notify the user if it is set
Adds a "no-ticket-required" to all activities and if set will show
a notification, telling the user that currently the app is inactive
and that no ticket is required.

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -64,6 +64,10 @@
     "loading-message": "Lädt...",
     "loading-message-ticket": "Ticket wird geladen ...",
     "no-full-validity-default": "Kein erweiterter Zutritt zur Universität",
+    "no-ticket-required": {
+        "body": "Für den Zugang wird zur Zeit kein Eintrittsticket benötigt.",
+        "summary": "Diese Applikation ist zur Zeit inaktiv"
+    },
     "no-tickets-message": "Sie besitzen derzeit keine Tickets!",
     "partial-validity-default": "Zutritt zur Universität",
     "reload": "Aktualisieren",
