Delete translation slots, use translation overrides

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -7,7 +7,10 @@
         "3g-proof-status": "Status",
         "3g-proof-valid-for": "Gültigkeit",
         "3g-proof-valid-till-title": "Gültig bis",
-        "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr importieren, indem Sie den entsprechenden QR-Code scannen. Alternativ kann auch ein PDF-Dokument oder ein Bild mit dem QR-Code ausgewählt werden.",
+        "additional-information-1": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr importieren, indem Sie den entsprechenden QR-Code scannen. Alternativ kann auch ein PDF-Dokument oder ein Bild mit dem QR-Code ausgewählt werden.",
+        "additional-information-2": "Selbsttests der Länder Steiermark und Kärnten können ebenfalls importiert, aber nicht direkt in der Applikation validiert werden. sie müssen sicherstellen, dass Ihr Testergebnis noch gültig ist. die Kontrolle erfolgt beim Einlass.",
+        "additional-information-3": "Weitere Informationen zum Thema Corona an der TU Graz finden Sie unter: <a target=\"_blank\" class=\"int-link-external\" href=\"{{- linkDE}}\" title=\"Coronavirus TU Graz\"><span>Coronavirus TU Graz </span></a><br /><br />",
+        "additional-information-4": "Was macht die TU Graz mit Ihren Daten? Die Datenschutzerklärung zur App \"TU Graz greenlight\" finden Sie hier: <a target=\"_blank\" class=\"int-link-external\" href=\"{{- link}}\" title=\"zur Datenschutzerklärung\"><span>zur Datenschutzerklärung </span></a>",
         "confirm-checkbox-valid-cert-text": "Ich bestätige, dass mein Nachweis für die Dauer meines Aufenthalts gültig ist, sowie die Richtigkeit meiner Angaben, und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
         "confirm-not-checked-body": "Bitte bestätigen Sie, dass Ihre Angaben richtig sind und dass Sie sich bewusst sind, dass der Missbrauch der App greenlight zu rechtlichen Konsequenzen führen kann.",
         "confirm-not-checked-title": "Zustimmung nicht erteilt!",
@@ -15,12 +18,14 @@
         "create-ticket": "Ticket erstellen",
         "create-ticket-success-body": "Das angeforderte Eintrittsticket für den Ort {{place}} wurde erfolgreich erstellt.",
         "create-ticket-success-title": "Ticket erfolgreich erstellt!",
+        "description": "Erstellt ein Ticket für den Zugang zu den Räumlichkeiten der Universität.",
         "filepicker-button-title": "PDF oder Bild auswählen",
         "filepicker-context": "PDF oder Bild zur Überprüfung auswählen",
         "found-valid-3g": "Es wurde ein gültiger Nachweis importiert.",
         "found-valid-3g-preCheck": "Es wurden lokal gespeicherte gültige Nachweis-Informationen gefunden.",
         "found-valid-selftest": "Es wurde ein Selbsttest gefunden.",
         "found-valid-selftest-preCheck": "Es wurde ein lokal gespeicherter Selbsttest gefunden.",
+        "full-validity": "Zutritt zu Präsenzlehrveranstaltungen",
         "invalid-body": "Bitte versuchen Sie es mit einem anderen Dokument noch einmal.",
         "invalid-document": "Der Nachweis ist aktuell nicht für den Eintritt an der {{place}} gültig.",
         "invalid-document-prefix": "Technische Details: ",
@@ -30,9 +35,12 @@
         "manage-tickets-text": "Es wurden aktive Tickets gefunden. Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
         "manual-uploading-message": "Suche nach gültigem QR-Code...",
         "manually-button-text": "Datei hochladen",
+        "no-full-validity": "Kein Zutritt zu Präsenzlehrveranstaltungen",
         "no-photo-body": "Es existiert kein gültiges Foto von Ihrem Studierenden- oder Bedienstetenausweis in {{serviceName}}. Bitte wenden Sie sich an die Studienabteilung.",
         "no-qr-code": "Kein QR-Code gefunden!",
         "not-same-person": "Der hochgeladene Nachweis konnte der angemeldeten Person nicht zugeordnet werden.",
+        "partial-validity-1": "Zutritt zu Präsenzprüfungen",
+        "partial-validity-2": "Zutritt zu geöffneten Bereichen der Univerität",
         "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
         "other-error-title": "Fehler!",
         "photo-not-available-body": "Es konnte kein Foto von Ihrem Studierenden- oder Bedienstetenausweis aus {{serviceName}} geladen werden. Bitte versuchen Sie es zu einem späteren Zeitpunkt noch einmal.",
@@ -86,6 +94,7 @@
         "delete-ticket-notfound-title": "Ticket nicht gefunden!",
         "delete-ticket-success-body": "Das Ticket für den Ort {{place}} wurde erfolgreich gelöscht.",
         "delete-ticket-success-title": "Ticket erfolgreich gelöscht!",
+        "greenlight-reference": "Es wurde kein gültiger gespeicherter Nachweis gefunden. zeigen Sie ihren Nachweis manuell vor oder laden Sie einen neuen Nachweis hoch, indem Sie ein neues Ticket unter <a href='acquire-3g-ticket' title='Eintrittsticket erstellen' target='_self' class='int-link-internal-light'><span>Eintrittsticket erstellen</span></a> anfordern.",
         "invalid-evidence": "Falls der Nachweis nicht mehr gültig ist, können Sie ein neues Ticket erstellen und einen neuen Nachweis hochladen.",
         "logged-out-body": "Die Sitzung ist abgelaufen. Bitte melden Sie sich erneut an.",
         "logged-out-title": "Sitzung abgelaufen!",
@@ -111,8 +120,13 @@
         "information-container-body": "Ist ein gültiger Grüner Pass auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Farbe dargestellt. Der QR-Code kann mit GreenCheck validiert werden. Ist ein Selbsttest des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt. Dieser QR-Code kann nicht in greenlight validiert werden, daher muss die Kontrolle mit einem QR-Code Scanner erfolgen. Ist ein gültiger universitätsinterner Test auf dem Gerät importiert, wird das Ticket in Farbe dargestellt. Die manuelle Validierung dieses Tests kann nur mit dem Originaldokument erfolgen.",
         "information-container-headline": "Informationen zum Nachweis",
         "place-name": "Ort",
+        "place": "Eintrittsticket: Ort",
         "switch-label-in-color": "In Farbe",
-        "switch-label-in-grayscale": "In Graustufen"
+        "switch-label-in-grayscale": "In Graustufen",
+        "information-container-1": "Informationen zum Nachweis",
+        "information-container-2": "Ist ein gültiger Grüner Pass auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Farbe dargestellt. Der QR-Code kann mit GreenCheck validiert werden. ",
+        "information-container-3": "Ist ein gültiger universitätsinterner Test auf dem Gerät importiert, wird das Ticket in Farbe dargestellt. Die manuelle Validierung dieses Tests kann nur mit dem Originaldokument erfolgen.",
+        "information-container-4": "Ist ein Selbsttest des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt. Dieser QR-Code kann nicht in greenlight validiert werden, daher muss die Kontrolle mit einem QR-Code Scanner erfolgen."
     },
     "show-ticket-title": "Ticket: ",
     "valid-till": "Voraussichtlich gültig bis ",
@@ -120,5 +134,6 @@
     "validation-not-possible-body": "Der Nachweis kann aktuell nicht validiert werden. Versuchen Sie es später nochmals.",
     "validation-not-possible-title": "Validierung aktuell nicht möglich",
     "validity-tooltip": "Nach den aktuellen Bestimmungen der {{place}}. Die Gültigkeitsdauer wird bei einer Änderung der Bestimmungen automatisch aktualisiert.",
-    "validity-tooltip-ticket-text": "Das Ticket ist nur in elektronischer Form gültig."
+    "validity-tooltip-ticket-text": "Das Ticket ist nur in elektronischer Form gültig.",
+    "university-name": "TU Graz"
 }
