--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -15,12 +15,14 @@
         "create-ticket": "Create ticket",
         "create-ticket-success-body": "The acquired entrance ticket for {{place}} was successfully created.",
         "create-ticket-success-title": "Ticket successfully created!",
+        "description": "Creates a ticket for access to premises of the University.",
         "filepicker-button-title": "Choose PDF or image",
         "filepicker-context": "Choose PDF or image for verification",
         "found-valid-3g": "A valid evidence was imported.",
         "found-valid-3g-preCheck": "Stored valid evidence could be found.",
         "found-valid-selftest": "A self-test was found.",
         "found-valid-selftest-preCheck": "A locally saved self-test was found.",
+        "full-validity": "Access to on-site lectures",
         "invalid-body": "Please try again with another document.",
         "invalid-document": "The evidence is currently not valid for {{place}}.",
         "invalid-document-prefix": "Technical details: ",
@@ -30,11 +32,14 @@
         "manage-tickets-text": "Active tickets could be found. You can manage your active tickets at: ",
         "manual-uploading-message": "Search for valid QR code...",
         "manually-button-text": "Upload File",
+        "no-full-validity": "No access to on-site lectures",
         "no-photo-body": "There is no valid photo of your student or staff ID in {{serviceName}}. Please contact the studies department.",
         "no-qr-code": "No QR code found!",
         "not-same-person": "The person in the uploaded evidence does not match the person logged in.",
         "other-error-body": "An unknown error has occurred.",
         "other-error-title": "Error!",
+        "partial-validity-1": "Access to on-site exams",
+        "partial-validity-2": "Access to opened areas of the University",
         "photo-not-available-body": "No photo of your student or staff ID card could be loaded from {{serviceName}}. Please try again at a later time.",
         "photo-not-available-title": "Ticket creation failed!",
         "qr-button-text": "Scan QR code",
@@ -86,6 +91,7 @@
         "delete-ticket-notfound-title": "Ticket not found!",
         "delete-ticket-success-body": "The ticket for {{place}} was successfully deleted.",
         "delete-ticket-success-title": "Ticket successfully deleted!",
+        "greenlight-reference": "No valid stored evidence was found. Show your evidence manually or upload a new evidence by requesting a new ticket under <a href='acquire-3g-ticket' title='Create entry ticket' target='_self' class='int-link-internal-light'><span>Create entry ticket</span></a>.",
         "invalid-evidence": "If the evidence is no longer valid, you can create a new ticket and upload a new evidence.",
         "logged-out-body": "The session has expired. Please log in again.",
         "logged-out-title": "Session expired!",
@@ -111,14 +117,20 @@
         "information-container-body": "If a valid health certificate is available on this device then its QR code is displayed and the ticket is shown in color. This QR code can be checked with GreenCheck. If a self-test that was issued by Land Steiermark or Land Kärnten is available on this device then its QR code is displayed and the ticket is shown in black and white. This QR code cannot be validated by this app, therefore its validation requires a QR code scanner. If a valid university-internal test is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.",
         "information-container-headline": "Information about evidence",
         "place-name": "Place",
+        "place": "Entry: Place",
         "switch-label-in-color": "In color",
-        "switch-label-in-grayscale": "In grayscale"
+        "switch-label-in-grayscale": "In grayscale",
+        "information-container-1": "Information about evidence",
+        "information-container-2": "If a valid health certificate is available on this device then its QR code is displayed and the ticket is shown in color. This QR code can be checked with GreenCheck.",
+        "information-container-3": "If a valid university-internal test is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.",
+        "information-container-4": "If a self-test that was issued by Land Steiermark or Land Kärnten is available on this device then its QR code is displayed and the ticket is shown in black and white. This QR code cannot be validated by this app, therefore its validation requires a QR code scanner."
     },
     "show-ticket-title": "Ticket: ",
     "valid-till": "Probably valid until ",
     "validation-not-possible": "The validation of the evidence is currently not possible for technical reasons. Please try again later.",
     "validation-not-possible-body": "The evidence cannot currently be validated. Please try again later.",
-    "validation-not-possible-title": "Validierung aktuell nicht möglich",
+    "validation-not-possible-title": "Validation currently not possible",
     "validity-tooltip": "According to the current regulations of {{place}}. The validity period is automatically updated when the regulations change.",
-    "validity-tooltip-ticket-text": "The ticket is only valid in electronic form."
+    "validity-tooltip-ticket-text": "The ticket is only valid in electronic form.",
+    "university-name": "TU Graz"
 }
